--- a/audiobookshelf/compose.yml
+++ b/audiobookshelf/compose.yml
@@ -1,6 +1,7 @@
 services:
   audiobookshelf:
     image: ghcr.io/advplyr/audiobookshelf:2.29.0
+    container_name: audiobookshelf
     ports:
       - 13378:80
     volumes:
