--- a/audiobookshelf/compose.yml
+++ b/audiobookshelf/compose.yml
@@ -2,8 +2,8 @@ services:
   audiobookshelf:
     image: ghcr.io/advplyr/audiobookshelf:2.29.0
     container_name: audiobookshelf
-    ports:
-      - 13378:80
+#    ports:
+#      - 13378:80
     volumes:
       - $DOCKER_VOLUME_PATH/audiobookshelf_audiobooks:/audiobooks
       #      - </path/to/podcasts>:/podcasts
