--- a/caddy/compose.yaml
+++ b/caddy/compose.yaml
@@ -1,6 +1,6 @@
 services:
   caddy:
-    image: caddy:2.10.2-alpine
+    image: ghcr.io/caddybuilds/caddy-cloudflare:2.10.2
     container_name: caddy
     cap_add:
       - NET_ADMIN
