Specify volume name in Docker Compose
Added the 'name' field to the 'filebrowser_data' volume in compose.yml for explicit volume naming.

--- a/filebrowser_quantum/compose.yml
+++ b/filebrowser_quantum/compose.yml
@@ -19,6 +19,7 @@ networks:
     external: true
 volumes:
   filebrowser_data:
+    name: filebrowser_data
     driver: local
     driver_opts:
       type: none
