Add UID/GID support for file permissions
Introduced UID and GID environment variables in .env.example and documented them in README.md to allow configuring user and group IDs for file permissions. Updated compose.yml to run the container as the specified UID/GID, improving compatibility with host file ownership and resolving permission issues.

--- a/filebrowser_quantum/.env.example
+++ b/filebrowser_quantum/.env.example
@@ -1,6 +1,8 @@
 IMAGE_TAG=1.1.0-beta
 NETWORK_NAME=internal-net
 TZ=Asia/Kolkata
+UID=1000
+GID=1000
 # filebrowser specific
 FILEBROWSER_ADMIN_PASSWORD=change-me
 FILEBROWSER_PORT=8080
