--- a/portainer/compose.yml
+++ b/portainer/compose.yml
@@ -1,8 +1,6 @@
----
-# version: "3.9"
 services:
   portainer:
-    image: portainer/portainer-ce:2.33.3-alpine
+    image: portainer/portainer-ce:2.33.4-alpine
     container_name: portainer
     labels:
       - io.portainer.accesscontrol.public=true
@@ -12,6 +10,8 @@ services:
     #   - traefik.http.routers.portainer.service=portainer
     #   - traefik.http.services.portainer.loadbalancer.server.port=9000
     #   - traefik.http.routers.portainer.tls=true
+    environment:
+      - AGENT_SECRET=${AGENT_SECRET}
     # ports:
     #   - 9443:9443
     volumes:
